src/snapshots/afrotd__parser__tests__rule_html_2.4.2.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.4.2 Gehört zu (Belongs to)
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                „Gehört zu“ bezeichnet im Vergleich zu „in Besitz“ die
                Zugehörigkeit eines Dead Balls. Diese Zugehörigkeit kann
                vorübergehend sein, denn der Ball muss in Übereinstimmung mit
                den entsprechenden Regeln der jeweiligen Situation ins Spiel
                gebracht werden.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.4.2"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
