src/snapshots/afrotd__parser__tests__rule_html_2.4.4.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.4.4 Gleichzeitiges (Simultaneous) Fangen oder Recovern
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Gleichzeitiges Fangen oder Recovern ist das Fangen oder
                Recovern, bei dem gegnerische Spieler, die sich inbounds
                befinden, gemeinsam einen Live Ball in Besitz nehmen (A.R.
                7.3.6.I und 7.3.6.II).
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.4.4"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
