src/snapshots/afrotd__parser__tests__rule_html_2.5.1.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.5.1 Clipping
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Clipping ist ein Block gegen einen Gegner, bei dem die
                Wucht des anfänglichen Kontaktes von hinten und an oder
                unterhalb der Gürtellinie erfolgt (Regel 9.1.5)
                </li>
                <li>Die Position des Kopfes des Blockers oder seiner Füße
                bezeichnen nicht unbedingt den Punkt des ursprünglichen
                Kontaktes.
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.5.1"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
