src/snapshots/afrotd__parser__tests__rule_html_2.6.1.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.6.1 Absichtliches Advancen eines Dead Balls
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Das absichtliche Advancen eines Dead Balls ist der Versuch
                eines Spielers, den Ball noch weiter vorwärts zu bewegen,
                nachdem ein Teil seines Körpers, ausgenommen seiner Hände oder
                Füße, den Boden berührt hat oder nachdem der Ball regelgemäß
                für dead erklärt wurde (Ausnahme: Regel 4.1.3.bAusnahme).
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.6.1"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
