src/snapshots/afrotd__parser__tests__rule_html_2.7.1.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.7.1 Down
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Ein Down ist ein Teil des Spieles, der, nachdem der Ball
                spielbereit ist, mit einem legalen Snap (Scrimmage Down) oder
                einem legalen Free Kick (Free Kick-Down) beginnt. Der Down
                endet, sobald der Ball das nächste Mal dead wird (Ausnahme: Der
                Try ist ein Scrimmage Down, der beginnt, wenn der Referee
                anzeigt, dass der Ball spielbereit ist (Regel 8.3.2.b)).
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.7.1"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
