src/snapshots/afrotd__parser__tests__rule_html_2.7.3.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.7.3 Downverlust
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Downverlust ist die Bezeichnung für den Verlust des Rechtes,
                einen Down zu wiederholen.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.7.3"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
