src/snapshots/afrotd__parser__tests__rule_html_2.8.3.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.8.3 Ungültiges Signal
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Ein ungültiges Signal ist ein Winkzeichen irgendeines Team
                B-Spielers:
            </p>
            <ol type="a">
                <li>das nicht den Anforderungen der Regel 2.8.2 entspricht;
                </li>
                <li>inklusive eines „T –Signals“, welches während eines
                Scrimmage Kicks oder eines Free Kicks gegeben wird (A.R.
                6.5.3.VII); oder
                </li>
                <li>das gegeben wird, nachdem ein Scrimmage Kick jenseits der
                neutralen Zone gefangen wurde oder den Boden oder einen anderen
                Spieler jenseits der neutralen Zone berührt hat (A.R. 6.5.3.III
                bis 6.5.3.V) oder
                </li>
                <li>das gegeben wird, nachdem ein Free Kick gefangen wurde oder
                den Boden oder einen anderen Spieler berührt hat (Ausnahme:
                Regel 6.4.1.f).
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.8.3"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
